src/GraqlParser.js
// Generated from Graql.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var GraqlListener = require('./GraqlListener').GraqlListener;
var GraqlVisitor = require('./GraqlVisitor').GraqlVisitor;

var grammarFileName = "Graql.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "','", "';'", "'{'", "'}'", "'('", "')'", "':'", 
                     "'['", "']'", "'='", "'match'", "'get'", "'define'", 
                     "'undefine'", "'insert'", "'delete'", "'aggregate'", 
                     "'compute'", "'thing'", "'entity'", "'attribute'", 
                     "'relation'", "'role'", "'rule'", "'offset'", "'limit'", 
                     "'sort'", null, "'asc'", "'desc'", "'abstract'", "'via'", 
                     "'as'", "'id'", "'type'", null, null, "'isa'", "'isa!'", 
                     "'sub'", "'sub!'", "'key'", "'has'", "'plays'", "'relates'", 
                     "'datatype'", "'regex'", "'when'", "'then'", "'group'", 
                     "'count'", "'max'", "'min'", "'mean'", "'median'", 
                     "'std'", "'sum'", "'cluster'", "'centrality'", "'path'", 
                     "'degree'", "'k-core'", "'connected-component'", "'from'", 
                     "'to'", "'of'", "'in'", "'using'", "'where'", "'min-k'", 
                     "'k'", "'size'", "'contains'", "'or'", "'not'", "'like'", 
                     "'!='", "'=='", "'!=='", "'>'", "'>='", "'<'", "'<='", 
                     "'long'", "'double'", "'string'", "'boolean'", "'date'", 
                     null, "'true'", "'false'", null, null, null, null, 
                     null, null, "'$_'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, "MATCH", "GET", "DEFINE", "UNDEFINE", 
                      "INSERT", "DELETE", "AGGREGATE", "COMPUTE", "THING", 
                      "ENTITY", "ATTRIBUTE", "RELATION", "ROLE", "RULE", 
                      "OFFSET", "LIMIT", "SORT", "ORDER_", "ASC", "DESC", 
                      "ABSTRACT", "VIA", "AS", "ID", "TYPE", "ISA_", "SUB_", 
                      "ISA", "ISAX", "SUB", "SUBX", "KEY", "HAS", "PLAYS", 
                      "RELATES", "DATATYPE", "REGEX", "WHEN", "THEN", "GROUP", 
                      "COUNT", "MAX", "MIN", "MEAN", "MEDIAN", "STD", "SUM", 
                      "CLUSTER", "CENTRALITY", "PATH", "DEGREE", "K_CORE", 
                      "CONNECTED_COMPONENT", "FROM", "TO", "OF", "IN", "USING", 
                      "WHERE", "MIN_K", "K", "SIZE", "CONTAINS", "OR", "NOT", 
                      "LIKE", "NEQ", "EQV", "NEQV", "GT", "GTE", "LT", "LTE", 
                      "LONG", "DOUBLE", "STRING", "BOOLEAN", "DATE", "BOOLEAN_", 
                      "TRUE", "FALSE", "STRING_", "INTEGER_", "REAL_", "DATE_", 
                      "DATETIME_", "VAR_", "VAR_ANONYMOUS_", "VAR_NAMED_", 
                      "ID_", "TYPE_IMPLICIT_", "TYPE_NAME_", "COMMENT", 
                      "WS" ];

var ruleNames =  [ "eof_query", "eof_query_list", "eof_pattern", "eof_pattern_list", 
                   "query", "query_define", "query_undefine", "query_insert", 
                   "query_delete", "query_get", "query_compute", "query_get_aggregate", 
                   "query_get_group", "query_get_group_agg", "variables", 
                   "filters", "sort", "offset", "limit", "function_aggregate", 
                   "function_method", "function_group", "patterns", "pattern", 
                   "pattern_conjunction", "pattern_disjunction", "pattern_negation", 
                   "pattern_statement", "statement_type", "type_property", 
                   "statement_instance", "statement_thing", "statement_relation", 
                   "statement_attribute", "relation", "role_player", "player", 
                   "via", "attributes", "attribute", "operation", "assignment", 
                   "comparison", "comparator", "comparable", "containable", 
                   "compute_conditions", "compute_method", "conditions_count", 
                   "conditions_value", "conditions_central", "conditions_cluster", 
                   "conditions_path", "input_count", "input_value", "input_central", 
                   "input_cluster", "input_path", "compute_direction", "compute_target", 
                   "compute_scope", "compute_config", "compute_algorithm", 
                   "compute_args", "compute_args_array", "compute_arg", 
                   "type", "type_label", "type_labels", "type_label_array", 
                   "type_native", "type_name", "datatype", "literal", "regex", 
                   "unreserved" ];

function GraqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

GraqlParser.prototype = Object.create(antlr4.Parser.prototype);
GraqlParser.prototype.constructor = GraqlParser;

Object.defineProperty(GraqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

GraqlParser.EOF = antlr4.Token.EOF;
GraqlParser.T__0 = 1;
GraqlParser.T__1 = 2;
GraqlParser.T__2 = 3;
GraqlParser.T__3 = 4;
GraqlParser.T__4 = 5;
GraqlParser.T__5 = 6;
GraqlParser.T__6 = 7;
GraqlParser.T__7 = 8;
GraqlParser.T__8 = 9;
GraqlParser.T__9 = 10;
GraqlParser.MATCH = 11;
GraqlParser.GET = 12;
GraqlParser.DEFINE = 13;
GraqlParser.UNDEFINE = 14;
GraqlParser.INSERT = 15;
GraqlParser.DELETE = 16;
GraqlParser.AGGREGATE = 17;
GraqlParser.COMPUTE = 18;
GraqlParser.THING = 19;
GraqlParser.ENTITY = 20;
GraqlParser.ATTRIBUTE = 21;
GraqlParser.RELATION = 22;
GraqlParser.ROLE = 23;
GraqlParser.RULE = 24;
GraqlParser.OFFSET = 25;
GraqlParser.LIMIT = 26;
GraqlParser.SORT = 27;
GraqlParser.ORDER_ = 28;
GraqlParser.ASC = 29;
GraqlParser.DESC = 30;
GraqlParser.ABSTRACT = 31;
GraqlParser.VIA = 32;
GraqlParser.AS = 33;
GraqlParser.ID = 34;
GraqlParser.TYPE = 35;
GraqlParser.ISA_ = 36;
GraqlParser.SUB_ = 37;
GraqlParser.ISA = 38;
GraqlParser.ISAX = 39;
GraqlParser.SUB = 40;
GraqlParser.SUBX = 41;
GraqlParser.KEY = 42;
GraqlParser.HAS = 43;
GraqlParser.PLAYS = 44;
GraqlParser.RELATES = 45;
GraqlParser.DATATYPE = 46;
GraqlParser.REGEX = 47;
GraqlParser.WHEN = 48;
GraqlParser.THEN = 49;
GraqlParser.GROUP = 50;
GraqlParser.COUNT = 51;
GraqlParser.MAX = 52;
GraqlParser.MIN = 53;
GraqlParser.MEAN = 54;
GraqlParser.MEDIAN = 55;
GraqlParser.STD = 56;
GraqlParser.SUM = 57;
GraqlParser.CLUSTER = 58;
GraqlParser.CENTRALITY = 59;
GraqlParser.PATH = 60;
GraqlParser.DEGREE = 61;
GraqlParser.K_CORE = 62;
GraqlParser.CONNECTED_COMPONENT = 63;
GraqlParser.FROM = 64;
GraqlParser.TO = 65;
GraqlParser.OF = 66;
GraqlParser.IN = 67;
GraqlParser.USING = 68;
GraqlParser.WHERE = 69;
GraqlParser.MIN_K = 70;
GraqlParser.K = 71;
GraqlParser.SIZE = 72;
GraqlParser.CONTAINS = 73;
GraqlParser.OR = 74;
GraqlParser.NOT = 75;
GraqlParser.LIKE = 76;
GraqlParser.NEQ = 77;
GraqlParser.EQV = 78;
GraqlParser.NEQV = 79;
GraqlParser.GT = 80;
GraqlParser.GTE = 81;
GraqlParser.LT = 82;
GraqlParser.LTE = 83;
GraqlParser.LONG = 84;
GraqlParser.DOUBLE = 85;
GraqlParser.STRING = 86;
GraqlParser.BOOLEAN = 87;
GraqlParser.DATE = 88;
GraqlParser.BOOLEAN_ = 89;
GraqlParser.TRUE = 90;
GraqlParser.FALSE = 91;
GraqlParser.STRING_ = 92;
GraqlParser.INTEGER_ = 93;
GraqlParser.REAL_ = 94;
GraqlParser.DATE_ = 95;
GraqlParser.DATETIME_ = 96;
GraqlParser.VAR_ = 97;
GraqlParser.VAR_ANONYMOUS_ = 98;
GraqlParser.VAR_NAMED_ = 99;
GraqlParser.ID_ = 100;
GraqlParser.TYPE_IMPLICIT_ = 101;
GraqlParser.TYPE_NAME_ = 102;
GraqlParser.COMMENT = 103;
GraqlParser.WS = 104;

GraqlParser.RULE_eof_query = 0;
GraqlParser.RULE_eof_query_list = 1;
GraqlParser.RULE_eof_pattern = 2;
GraqlParser.RULE_eof_pattern_list = 3;
GraqlParser.RULE_query = 4;
GraqlParser.RULE_query_define = 5;
GraqlParser.RULE_query_undefine = 6;
GraqlParser.RULE_query_insert = 7;
GraqlParser.RULE_query_delete = 8;
GraqlParser.RULE_query_get = 9;
GraqlParser.RULE_query_compute = 10;
GraqlParser.RULE_query_get_aggregate = 11;
GraqlParser.RULE_query_get_group = 12;
GraqlParser.RULE_query_get_group_agg = 13;
GraqlParser.RULE_variables = 14;
GraqlParser.RULE_filters = 15;
GraqlParser.RULE_sort = 16;
GraqlParser.RULE_offset = 17;
GraqlParser.RULE_limit = 18;
GraqlParser.RULE_function_aggregate = 19;
GraqlParser.RULE_function_method = 20;
GraqlParser.RULE_function_group = 21;
GraqlParser.RULE_patterns = 22;
GraqlParser.RULE_pattern = 23;
GraqlParser.RULE_pattern_conjunction = 24;
GraqlParser.RULE_pattern_disjunction = 25;
GraqlParser.RULE_pattern_negation = 26;
GraqlParser.RULE_pattern_statement = 27;
GraqlParser.RULE_statement_type = 28;
GraqlParser.RULE_type_property = 29;
GraqlParser.RULE_statement_instance = 30;
GraqlParser.RULE_statement_thing = 31;
GraqlParser.RULE_statement_relation = 32;
GraqlParser.RULE_statement_attribute = 33;
GraqlParser.RULE_relation = 34;
GraqlParser.RULE_role_player = 35;
GraqlParser.RULE_player = 36;
GraqlParser.RULE_via = 37;
GraqlParser.RULE_attributes = 38;
GraqlParser.RULE_attribute = 39;
GraqlParser.RULE_operation = 40;
GraqlParser.RULE_assignment = 41;
GraqlParser.RULE_comparison = 42;
GraqlParser.RULE_comparator = 43;
GraqlParser.RULE_comparable = 44;
GraqlParser.RULE_containable = 45;
GraqlParser.RULE_compute_conditions = 46;
GraqlParser.RULE_compute_method = 47;
GraqlParser.RULE_conditions_count = 48;
GraqlParser.RULE_conditions_value = 49;
GraqlParser.RULE_conditions_central = 50;
GraqlParser.RULE_conditions_cluster = 51;
GraqlParser.RULE_conditions_path = 52;
GraqlParser.RULE_input_count = 53;
GraqlParser.RULE_input_value = 54;
GraqlParser.RULE_input_central = 55;
GraqlParser.RULE_input_cluster = 56;
GraqlParser.RULE_input_path = 57;
GraqlParser.RULE_compute_direction = 58;
GraqlParser.RULE_compute_target = 59;
GraqlParser.RULE_compute_scope = 60;
GraqlParser.RULE_compute_config = 61;
GraqlParser.RULE_compute_algorithm = 62;
GraqlParser.RULE_compute_args = 63;
GraqlParser.RULE_compute_args_array = 64;
GraqlParser.RULE_compute_arg = 65;
GraqlParser.RULE_type = 66;
GraqlParser.RULE_type_label = 67;
GraqlParser.RULE_type_labels = 68;
GraqlParser.RULE_type_label_array = 69;
GraqlParser.RULE_type_native = 70;
GraqlParser.RULE_type_name = 71;
GraqlParser.RULE_datatype = 72;
GraqlParser.RULE_literal = 73;
GraqlParser.RULE_regex = 74;
GraqlParser.RULE_unreserved = 75;


function Eof_queryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraqlParser.RULE_eof_query;
    return this;
}

Eof_queryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Eof_queryContext.prototype.constructor = Eof_queryContext;

Eof_queryContext.prototype.query = function() {
    return this.getTypedRuleContext(QueryContext,0);
};

Eof_queryContext.prototype.EOF = function() {
    return this.getToken(GraqlParser.EOF, 0);
};

Eof_queryContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.enterEof_query(this);
	}
};

Eof_queryContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.exitEof_query(this);
	}
};

Eof_queryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GraqlVisitor ) {
        return visitor.visitEof_query(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GraqlParser.Eof_queryContext = Eof_queryContext;

GraqlParser.prototype.eof_query = function() {

    var localctx = new Eof_queryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, GraqlParser.RULE_eof_query);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 152;
        this.query();
        this.state = 153;
        this.match(GraqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Eof_query_listContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraqlParser.RULE_eof_query_list;
    return this;
}

Eof_query_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Eof_query_listContext.prototype.constructor = Eof_query_listContext;

Eof_query_listContext.prototype.EOF = function() {
    return this.getToken(GraqlParser.EOF, 0);
};

Eof_query_listContext.prototype.query = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(QueryContext);
    } else {
        return this.getTypedRuleContext(QueryContext,i);
    }
};

Eof_query_listContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.enterEof_query_list(this);
	}
};

Eof_query_listContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.exitEof_query_list(this);
	}
};

Eof_query_listContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GraqlVisitor ) {
        return visitor.visitEof_query_list(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GraqlParser.Eof_query_listContext = Eof_query_listContext;

GraqlParser.prototype.eof_query_list = function() {

    var localctx = new Eof_query_listContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, GraqlParser.RULE_eof_query_list);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 156; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 155;
            this.query();
            this.state = 158; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraqlParser.MATCH) | (1 << GraqlParser.DEFINE) | (1 << GraqlParser.UNDEFINE) | (1 << GraqlParser.INSERT) | (1 << GraqlParser.COMPUTE))) !== 0));
        this.state = 160;
        this.match(GraqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Eof_patternContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraqlParser.RULE_eof_pattern;
    return this;
}

Eof_patternContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Eof_patternContext.prototype.constructor = Eof_patternContext;

Eof_patternContext.prototype.pattern = function() {
    return this.getTypedRuleContext(PatternContext,0);
};

Eof_patternContext.prototype.EOF = function() {
    return this.getToken(GraqlParser.EOF, 0);
};

Eof_patternContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.enterEof_pattern(this);
	}
};

Eof_patternContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.exitEof_pattern(this);
	}
};

Eof_patternContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GraqlVisitor ) {
        return visitor.visitEof_pattern(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GraqlParser.Eof_patternContext = Eof_patternContext;

GraqlParser.prototype.eof_pattern = function() {

    var localctx = new Eof_patternContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, GraqlParser.RULE_eof_pattern);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 162;
        this.pattern();
        this.state = 163;
        this.match(GraqlParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Eof_pattern_listContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraqlParser.RULE_eof_pattern_list;
    return this;
}

Eof_pattern_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Eof_pattern_listContext.prototype.constructor = Eof_pattern_listContext;

Eof_pattern_listContext.prototype.EOF = function() {
    return this.getToken(GraqlParser.EOF, 0);
};

Eof_pattern_listContext.prototype.pattern = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PatternContext);
    } else {
        return this.getTypedRuleContext(PatternContext,i);
    }
};

Eof_pattern_listContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.enterEof_pattern_list(this);
	}
};

Eof_pattern_listContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraqlListener ) {
        listener.exitEof_pattern_list(this);
	}
};

Eof_pattern_listContext.prototype.accept = function(visitor) {
    if ( visitor instanceof GraqlVisitor ) {
        return visitor.visitEof_pattern_list(this);
    } else {
        return visitor.visitChildren(this);
    }
};




GraqlParser.Eof_pattern_listContext = Eof_pattern_listContext;

GraqlParser.prototype.eof_pattern_list = function() {
